# CommitMigration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  PUBLISHING.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP_v0.2.0.md  USAGE.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-validation.yml
examples/: mapping_hints.android_brand.json
integrations/codex/: .mcp.json  README.md
integrations/codex/.codex-plugin/: plugin.json
integrations/codex/skills/commit-migration/: SKILL.md
integrations/codex/skills/commit-migration/references/: android-checklist.md  android-mapping.md  workflow.md
schemas/: mapping_hints.schema.json
src/commit_migration/: __init__.py  analyzer.py  cli.py  git_ops.py  mcp_server.py  models.py
src/commit_migration/templates/: mapping_hints.example.json
