[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-migration"
version = "0.1.0"
description = "Android commit migration toolkit for AI-assisted branch porting."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Commit Migration Maintainers" }
]

[project.scripts]
commit-migration = "commit_migration.cli:main"

[project.optional-dependencies]
mcp = [
  "mcp>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
commit_migration = ["templates/*.json"]
